Prevent horizontal scrolling

--- a/app/menu/Inbox/Inbox.module.css
+++ b/app/menu/Inbox/Inbox.module.css
@@ -1,6 +1,7 @@
 .inbox {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .inbox h3 {
